--- a/TODO
+++ b/TODO
@@ -5,5 +5,6 @@
 -- launch to heroku
 -- migrate web url
 -- Set-up peak podcasting emails
+-- Change all secrete keys and add to .gitignore
 
 -- Add email confirmation for account sign-up
